-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 13, 14, 15
-
Component/s: core-svc
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246521 | 14u-cpu | Roman Kennke | P4 | Resolved | Fixed | master |
| JDK-8245875 | 14.0.2 | Roman Kennke | P4 | Resolved | Fixed | b09 |
| JDK-8245856 | 13.0.4 | Roman Kennke | P4 | Resolved | Fixed | b03 |
| JDK-8247949 | 11.0.9-oracle | Daniil Titov | P4 | Resolved | Fixed | b01 |
| JDK-8245878 | 11.0.9 | Roman Kennke | P4 | Resolved | Fixed | b01 |
| JDK-8246017 | openjdk8u262 | Roman Kennke | P4 | Resolved | Fixed | b05 |
If we look into the code, we'll see that whenever a new class is loaded and an event about it is delivered, when a garbage collection has occurred, classTrack_processUnloads iterates over all loaded classes to see if any of them have been unloaded. This leads to O(classCount * gcCount) performance, which in case of frequent GCs (and they are frequent, especially the minor ones) is close to O(classCount^2). In IDEA, we have quite a lot of classes, especially counting all lambdas, so this results in quite significant overhead.
Full analysis here: https://youtrack.jetbrains.com/issue/JBR-1611
- backported by
-
JDK-8245856 Slow class loading when running with JDWP
-
- Resolved
-
-
JDK-8245875 Slow class loading when running with JDWP
-
- Resolved
-
-
JDK-8245878 Slow class loading when running with JDWP
-
- Resolved
-
-
JDK-8246017 Slow class loading when running with JDWP
-
- Resolved
-
-
JDK-8246521 Slow class loading when running with JDWP
-
- Resolved
-
-
JDK-8247949 Slow class loading when running with JDWP
-
- Resolved
-
- relates to
-
JDK-8246223 Windows build fails after JDK-8227269
-
- Resolved
-
-
JDK-8241750 x86_32 build failure after JDK-8227269
-
- Resolved
-
-
JDK-8214892 Delayed starting of debugging via jcmd
-
- Resolved
-
-
JDK-8214892 Delayed starting of debugging via jcmd
-
- Resolved
-
-
JDK-8336401 Remove the option onjcmd from the jdwp agent
-
- Resolved
-