8227269: Slow class loading when running with JDWP

Reviewed-by: sspitsyn, cjplummer